welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:4: error: not found: value isMum
			if (isMum) {return true}
                            ^